@@ -19,7 +19,7 @@ CONFIG_SDRAM_BANK0=y
 #CONFIG_SDRAM_BANK1=y
 
 CONFIG_NOR_BUSWIDTH=16
-CONFIG_NOR_BANK0_START=0x00000000
+CONFIG_NOR_BANK0_START=0x40000000
 CONFIG_NOR_BANK0_LENGTH=(8*1024*1024)
 
 #CONFIG_DEBUG_LL=y
